reverting ssl logo

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                     <td align="center"><a href="https://letsencrypt.org/" style="text-decoration:none; ">
                         <img alt="SSL"
-                             src="img/ssl_image.jpg" width="120"
+                             src="img/letsencrypt_logo.png" width="120"
                              style="border: 0;"/></a></td>
                 </tr>
             </table>
